fix: fix the eslint configuration
the eslint configuration had a problem with the break line, that were using windows style for
breaklines, also another error in the eslint were the typescript, for some reason the eslint could
not lint properly with the ts, this issue was fixed using a different plugin parser for the eslint

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lsp",
+  "name": "stupid-lsp",
   "version": "1.0.0",
   "description": "A fake lsp server",
   "main": "index.js",
@@ -31,5 +31,10 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "vscode-languageserver": "^7.0.0",
+    "vscode-languageserver-textdocument": "^1.0.4",
+    "vscode-languageserver-types": "^3.16.0"
   }
 }
