--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,13 +16,13 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "indent": [
+        "@typescript-eslint/indent": [
             "error",
-            4
+            2
         ],
         "linebreak-style": [
             "error",
-            "windows"
+            "unix"
         ],
         "quotes": [
             "error",
