--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     }
   },
   "dependencies": {
+    "vscode-json-languageservice": "^4.2.1",
     "vscode-languageserver": "^7.0.0",
     "vscode-languageserver-textdocument": "^1.0.4",
     "vscode-languageserver-types": "^3.16.0"
