--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.15.0",
+    "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.0",
     "prettier": "^2.6.2",
     "typescript": "^4.6.4"
